--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [
+     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not safari < 10",
+      "not chrome < 51",
+      "not android < 5",
+      "not ie < 12"
     ],
     "development": [
       "last 1 chrome version",
@@ -33,7 +37,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.14",
     "json-loader": "^0.5.7",
     "sass": "^1.66.1"
-  }
+  },
 }
